--- a/index.html
+++ b/index.html
@@ -6,13 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="./styles.css">
     <title>Hello, world!</title>
+    
   </head>
   <body>
-    <h1>Hello, world!</h1>
+
+    <div class="topnav">
+        <a href=“#”>Home</a>
+        <a href=“#”>Rap Sheet</a>
+        <a href=“#”>News Feeds</a>
+        <a href=“#”>Financial Interest</a>
+        <a href=“#”>Travel Report</a>
+    </div>
+
 
     <!-- Optional JavaScript -->
      <script src="main.js"></script>
