personal page fixes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a href="#">Executive Summery</a>
       <a href="pages/career.html">Career</a>
       <a href="pages/newsfeed.html">News Feed</a>
-      <a href=".pages/personal.html">Personal</a>
+      <a href="pages/personal.html">Personal</a>
   </div>
 
     <!-- Optional JavaScript -->
