fixed navbar for all pages

--- a/pages/career.html
+++ b/pages/career.html
@@ -22,7 +22,7 @@
         <!-- navbar here -->
         <div class="topnav">
             <a href="../index.html">Executive Summery</a>
-            <a href="#">Career</a>
+            <a href="#" class="active">Career</a>
             <a href="newsfeed.html">News Feed</a>
             <a href="personal.html">Personal</a>
         </div>
