--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <header>
         <!-- navbar here -->
         <div class="topnav">
-            <a href="../index.html">Executive Summery</a>
-            <a href="#">Career</a>
-            <a href="newsfeed.html">News Feed</a>
-            <a href="personal.html">Personal</a>
+            <a href="#" class="active">Executive Summery</a>
+            <a href="pages/career.html">Career</a>
+            <a href="pages/newsfeed.html">News Feed</a>
+            <a href="pages/personal.html">Personal</a>
         </div>
     </header>
     <main>
