--- a/pages/newsfeed.html
+++ b/pages/newsfeed.html
@@ -22,8 +22,8 @@
         <!-- navbar here -->
         <div class="topnav">
             <a href="../index.html">Executive Summery</a>
-            <a href="#">Career</a>
-            <a href="newsfeed.html">News Feed</a>
+            <a href="career.html">Career</a>
+            <a href="#" class="active">News Feed</a>
             <a href="personal.html">Personal</a>
         </div>
     </header>
