--- a/pages/personal.html
+++ b/pages/personal.html
@@ -22,9 +22,9 @@
         <!-- navbar here -->
         <div class="topnav">
             <a href="../index.html">Executive Summery</a>
-            <a href="#">Career</a>
+            <a href="career.html">Career</a>
             <a href="newsfeed.html">News Feed</a>
-            <a href="personal.html">Personal</a>
+            <a href="#" class="active">Personal</a>
         </div>
     </header>
     <main>
