--- a/pages/personal.html
+++ b/pages/personal.html
@@ -28,6 +28,9 @@
         </div>
     </header>
     <main>
+      
+        <div id="imgloc">
+          </div> 
         <!-- main content containers/html here -->
     </main>
     <footer>
@@ -63,7 +66,7 @@
           </div>
     </footer>
     <!-- Optional JavaScript -->
-    <script src="main.js"></script>
+    <script src="personal.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
