--- a/pages/personal.html
+++ b/pages/personal.html
@@ -29,7 +29,7 @@
     </header>
     <main>
       
-        <div id="imgloc">
+        <div id="flex-container">
           </div> 
         <!-- main content containers/html here -->
     </main>
@@ -66,7 +66,7 @@
           </div>
     </footer>
     <!-- Optional JavaScript -->
-    <script src="personal.js"></script>
+    
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
@@ -74,7 +74,9 @@
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-    <script src="career.js"></script>
+        <script src="personalData.js"></script>
+        <script src="personal.js"></script>
+
 </body>
 
 </html>
