--- a/pages/newsfeed.html
+++ b/pages/newsfeed.html
@@ -116,7 +116,9 @@
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-    <script src="newsfeed.js"></script>
+    
+        <script src="newsfeeddata.js"></script>
+        <script src="newsfeed.js"></script>
 </body>
 
 </html>
