final style edits

--- a/pages/career.html
+++ b/pages/career.html
@@ -21,7 +21,7 @@
     <header>
         <!-- navbar here -->
         <div class="topnav">
-            <a href="../index.html">Executive Summery</a>
+            <a href="../index.html">Artist Summary</a>
             <a href="#" class="active">Career</a>
             <a href="newsfeed.html">News Feed</a>
             <a href="personal.html">Personal</a>
