--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header>
         <!-- navbar here -->
         <div class="topnav">
-            <a href="#" class="active">Executive Summery</a>
+            <a href="#" class="active">Artist Summary</a>
             <a href="pages/career.html">Career</a>
             <a href="pages/newsfeed.html">News Feed</a>
             <a href="pages/personal.html">Personal</a>
