--- a/pages/newsfeed.html
+++ b/pages/newsfeed.html
@@ -26,7 +26,7 @@
     <header>
         <!-- navbar here -->
         <div class="topnav">
-            <a href="../index.html">Executive Summery</a>
+            <a href="../index.html">Artist Summery</a>
             <a href="career.html">Career</a>
             <a href="#" class="active">News Feed</a>
             <a href="personal.html">Personal</a>
