--- a/pages/personal.html
+++ b/pages/personal.html
@@ -21,7 +21,7 @@
     <header>
         <!-- navbar here -->
         <div class="topnav">
-            <a href="../index.html">Executive Summery</a>
+            <a href="../index.html">Artist Summery</a>
             <a href="career.html">Career</a>
             <a href="newsfeed.html">News Feed</a>
             <a href="#" class="active">Personal</a>
